Fix:Pomodoro Button alignment

--- a/src/components/PomodoroTimer.css
+++ b/src/components/PomodoroTimer.css
@@ -20,29 +20,31 @@ h1 {
 }
 
 .timer-circle {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  border: 5px solid #0f881f;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem;
-  background-color: #f0f0f0;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    margin: 20px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 25px;
+    color: crimson;
+    border: 8px solid #b48181ff;
 }
+
 .timer-buttons {
-  display: flex;
-  gap: 10px;
+    margin-top: 75px;
+    display: flex;
+    justify-content: space-evenly;
 }
+
 .timer-buttons button {
-  padding: 10px 20px;
-  border-radius: 12px;
-  border: none;
-  background-color: #f0f0f0;
-  color: white;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background-color 0.2s ease;
+    background-color: #f2f6f8ff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .timer-buttons button:hover {
